# ICD-Mapping

./: CONNECTION_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  build.sh  debug_fs.py  debug_req.py  details.txt  main.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt  run_monolith.bat
Ayush-FHIR-Sparkle/: .env.example  HUGGINGFACE_SETUP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Ayush-FHIR-Sparkle/src/: App.tsx  index.css
Ayush-FHIR-Sparkle/src/components/: AuditSection.tsx  AuthBundleSection.tsx  CSVIngestSection.tsx  DashboardSection.tsx  FhirProblemSection.tsx  Header.tsx  HeroSection.tsx  IntegrationSection.tsx  Layout.tsx  ModernCSVIngestSection.tsx  ModernHeader.tsx  ModernSearchSection.tsx  ModernTranslateSection.tsx  SearchHistory.tsx  SearchSection.tsx  TranslateSection.tsx  WelcomeSection.tsx
Ayush-FHIR-Sparkle/src/config/: api.ts
Ayush-FHIR-Sparkle/src/hooks/: useSearchHistory.ts
Ayush-FHIR-Sparkle/src/pages/: AuthBundlePage.tsx  DashboardPage.tsx  Index.tsx  IngestPage.tsx  IntegrationsPage.tsx  SearchPage.tsx  (+2 more)
ayush-fhir/: API_DOCUMENTATION.md  README.md  requirements.txt
ayush-fhir/app/: main.py
ayush-fhir/static/: index.html
backend/: requirements.txt  test_import.py
backend/app/: main.py
backend/static/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
legacy_backup/: .gitignore
static/: index.html
static/assets/: index-BP5hh3r_.css  index-C9hD5UpB.js  index-Cj0vn-NT.css
(+31 files in other folders)
