[project]
name = "icd-mapping"
version = "0.1.0"
description = "Ayush ICD-11 Mapping Platform"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "jinja2>=3.1.2"
]

[tool.poetry]
name = "icd-mapping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
pydantic = ">=2.0.0"
python-multipart = ">=0.0.6"
requests = ">=2.31.0"
pandas = ">=2.0.0"
jinja2 = ">=3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
